fix: padding that makes text overflow

--- a/app/[locale]/globals.css
+++ b/app/[locale]/globals.css
@@ -42,8 +42,8 @@
   }
 
   .card {
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
     display: flex;
@@ -64,8 +64,8 @@
 
   @media (min-width: 1024px) {
     .card {
-      padding-left: 3.5rem;
-      padding-right: 3.5rem;
+      padding-left: 1.5rem;
+      padding-right: 1.5rem;
     }
   }
 
